--- a/project2.html
+++ b/project2.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- REQUIRED: Page Title -->
-    <title>Jackie's Portfolio</title>
+    <title>Jackie's Project Details Page</title>
 
     <!-- REQUIRED: Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -35,85 +35,53 @@
                 <ul class="navbar-nav ms-auto">
                     <!-- Menu Links -->
                     <class="nav-item"><a class="nav-link" style="display:inline-block;" href="/index.html">Home</a>
-                        <class="nav-item"><a class="nav-link" style="display:inline-block;" href="/project1.html">Project 1</a>
-                        <class="nav-item"><a class="nav-link" style="display:inline-block;" href="/project2.html">Project 2</a>
+                    <class="nav-item"><a class="nav-link" style="display:inline-block;" href="/project1.html">Project 1</a>
+                    <class="nav-item"><a class="nav-link" style="display:inline-block;" href="/project2.html">Project 2</a>
                 </ul>
             </div>
         </nav>
     </header>
     <!-- End of Header Section -->
 
-    <!-- Start of Hero Section -->
-    <section class="hero">
-        <p>Hello! My name is</p>
-        <h1>Jackie Alcoran</h1>
-        <p>I am a web & graphic design student from Oahu, Hawaii with <br>
-            experience in designing, printing, and selling custom merchandise!</p>
-    </section>
-    <!-- End of Hero Section -->
-
-    <!-- Start of Projects Section -->
+    <!-- Project Two Section -->
     <div class="my-5">
-    <section class="projects">
-        <h2>Projects</h2>
-        <div class="row">
-            <!-- E-Commerce Site Card -->
-            <div class="col">
-                <a href="/project1.html">
-                    <div class="card">
-                        <img src="images/webProto.png" class="card-img-top" alt="A preview of a website prototype">
-                        <div class="card-body">
-                            <h3><a href="/project1.html" class="card-title">Website Prototype</a></h3>
+        <section class="project two">
+            <!-- Project Two Final Product -->
+            <h1 class="projectTitle">Magazine Cover Mockup</h1>
+            <img src="images/magazineCover.png" class="card-img-top" alt="A preview of a magazine mockup design">
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+        dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+        ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
+        fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
+        deserunt mollit anim id est laborum.</p>
+    </div>
+    <!-- End of Project Two Final Product -->
 
-                            <p class="card-text">Designing an e-commerce website based on my own brand using Figma, with
-                                buttons
-                                for simple navigation.</p>
-                        </div>
-                    </div>
-                </a>
-            </div>
-            <!-- End of E-Commerce Site Card -->
+    <!-- Project Two PROCESS -->
+    <div class="my-5">
+    <h1>Magazine Cover Process</h1>
+    <div class="scroll-container">
+                    <img src="images/magazineCover.png"
+                        alt="The completed homepage of Jackie's e-commerce website prototype" style="width:100%">
+                    <img src="images/magazineCover.png" class=""
+                        alt="The completed product details page of Jackie's e-commerce website prototype"
+                        style="width:100%">
+        </div>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+        dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+        ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
+        fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
+        deserunt mollit anim id est laborum.</p>
+    </div>
+    <!-- End of Project Two PROCESS -->
 
-            <!-- Magazine Cover Card -->
-            <div class="col">
-                <a href="/project2.html">
-                    <div class="card">
-                        <img src="images/magazineCover.png" class="card-img-top"
-                            alt="A preview of a magazine mockup design">
-                        <div class="card-body">
-                            <h3><a href="/project2.html" class="card-title">Magazine Mockup</a></h3>
-                <p class="card-text">Creating a fake magazine using my own images and grids using Adobe
-                    Illustrator.
-                </p>
-            </div>
-        </div>
-        </a>
-        </div>
-        <!-- End of Magazine Cover Card -->
-        </div>
+
+
     </section>
     </div>
-    <!-- End of Projects Section -->
+    <!-- End of Project Two Section -->
 
-    <!-- Start of Contact Me Section -->
-    <div class="my-5">
-    <section class="contact-me">
-        <h2>Contact Me</h2>
-        <p>jca4@hawaii.edu</p>
-        <div class="my">
-        <form>
-            <input type="text" placeholder="Subject">
-        </div>
-            <br>
-            <div class="mb-1">
-            <input type="text" placeholder="Message">
-            </div>
-            <br>
-            <button type="button" class="btn btn-primary">Submit</button>
-        </form>
-    </section>
-    </div>
-    <!-- End of Contact Me Section -->
+    <br>
 
     <!-- Start of Footer Section -->
     <section class="footer">
