--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <ul class="navbar-nav ms-auto">
                     <!-- Menu Links -->
                     <class="nav-item"><a class="nav-link" style="display:inline-block;" href="/index.html">Home</a>
-                        <class="nav-item"><a class="nav-link" style="display:inline-block;" href="/project1.html">Project 1</a>
+                        <class="nav-item"><a class="nav-link" style="display:inline-block;" href="project1.html">Project 1</a>
                         <class="nav-item"><a class="nav-link" style="display:inline-block;" href="/project2.html">Project 2</a>
                 </ul>
             </div>
