--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
     <header class="py-3">
         <nav class="navbar navbar-expand-lg">
             <!-- Logo -->
-            <a class="navbar-brand" href="/index.html">jackie alcoran</a>
+            <a class="navbar-brand" href="index.html">jackie alcoran</a>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <!-- Menu Links -->
-                    <class="nav-item"><a class="nav-link" style="display:inline-block;" href="/index.html">Home</a>
+                    <class="nav-item"><a class="nav-link" style="display:inline-block;" href="index.html">Home</a>
                         <class="nav-item"><a class="nav-link" style="display:inline-block;" href="project1.html">Project 1</a>
-                        <class="nav-item"><a class="nav-link" style="display:inline-block;" href="/project2.html">Project 2</a>
+                        <class="nav-item"><a class="nav-link" style="display:inline-block;" href="project2.html">Project 2</a>
                 </ul>
             </div>
         </nav>
@@ -59,11 +59,11 @@
         <div class="row">
             <!-- E-Commerce Site Card -->
             <div class="col">
-                <a href="/project1.html">
+                <a href="project1.html">
                     <div class="card">
                         <img src="images/webProto.png" class="card-img-top" alt="A preview of a website prototype">
                         <div class="card-body">
-                            <h3><a href="/project1.html" class="card-title">Website Prototype</a></h3>
+                            <h3><a href="project1.html" class="card-title">Website Prototype</a></h3>
 
                             <p class="card-text">Designing an e-commerce website based on my own brand using Figma, with
                                 buttons
@@ -76,12 +76,12 @@
 
             <!-- Magazine Cover Card -->
             <div class="col">
-                <a href="/project2.html">
+                <a href="project2.html">
                     <div class="card">
                         <img src="images/magazineCover.png" class="card-img-top"
                             alt="A preview of a magazine mockup design">
                         <div class="card-body">
-                            <h3><a href="/project2.html" class="card-title">Magazine Mockup</a></h3>
+                            <h3><a href="project2.html" class="card-title">Magazine Mockup</a></h3>
                 <p class="card-text">Creating a fake magazine using my own images and grids using Adobe
                     Illustrator.
                 </p>
