--- a/project2.html
+++ b/project2.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- REQUIRED: Page Title -->
-    <title>Jackie's Project Details Page</title>
+    <title>Jackie's Project Details Page 2</title>
 
     <!-- REQUIRED: Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -30,13 +30,13 @@
     <header class="py-3">
         <nav class="navbar navbar-expand-lg">
             <!-- Logo -->
-            <a class="navbar-brand" href="/index.html">jackie alcoran</a>
+            <a class="navbar-brand" href="index.html">jackie alcoran</a>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <!-- Menu Links -->
-                    <class="nav-item"><a class="nav-link" style="display:inline-block;" href="/index.html">Home</a>
-                    <class="nav-item"><a class="nav-link" style="display:inline-block;" href="/project1.html">Project 1</a>
-                    <class="nav-item"><a class="nav-link" style="display:inline-block;" href="/project2.html">Project 2</a>
+                    <class="nav-item"><a class="nav-link" style="display:inline-block;" href="index.html">Home</a>
+                    <class="nav-item"><a class="nav-link" style="display:inline-block;" href="project1.html">Project 1</a>
+                    <class="nav-item"><a class="nav-link" style="display:inline-block;" href="project2.html">Project 2</a>
                 </ul>
             </div>
         </nav>
